Small style updates, fixed the spacing on the left for mobile size.

--- a/MessageBoard/MessageBoard/Content/Site.less
+++ b/MessageBoard/MessageBoard/Content/Site.less
@@ -20,11 +20,16 @@
         border-top: 1px solid #888;
         margin-top: 5px;
         //margin-left: 30px;
-
         .created {
             font-size: 9px;
             margin-left: 10px;
             text-shadow: 2px 2px 2px;
         }
+    }
+}
+
+@media all and (max-width: 768px) {
+    .main {
+        margin-left: 0;
     }
 }
